Refactor `BaristaActorTests` file in exercise 1.